# arithmeticExpressions

./: CMakeLists.txt
include/: MathEq.h  dataStruct.h  lexeminator.h  postfixinator.h  reshatinator.h  syntaxinator.h
samples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  lexeminator.cpp  main.cpp  postfixinator.cpp  reshatinator.cpp  syntaxinator.cpp
test/: CMakeLists.txt  test_DataStruct.cpp  test_MathEq.cpp  test_main.cpp
